[gd_scene load_steps=6 format=2]

[ext_resource path="res://TranferirTairon.gd" type="Script" id=1]
[ext_resource path="res://FreeLookCamera.gd" type="Script" id=3]
[ext_resource path="res://Scenes/tairon/assets/piso fino.jpg" type="Texture" id=4]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )
uv1_triplanar = true

[node name="TranferirTairon" type="Spatial"]
script = ExtResource( 1 )

[node name="BlocksContainer" type="Spatial" parent="."]

[node name="ObjectsContainer" type="Spatial" parent="."]

[node name="Floor" type="StaticBody" parent="." groups=["suelo"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 50, 0, 0, 0, 0.5, 0, 0, 0, 50, 0, 0, 0 )
shape = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15 )
current = true
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="CanvasLayer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 60.0
text = "Volver"

[node name="AddObjectButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 60.0
text = "Añadir Nevera"

[node name="HelpLabel" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
margin_bottom = -20.0
text = "Controles:
WASD: Mover | Espacio/Ctrl: Subir/Bajar | Shift: Correr | Ratón: Mirar | Esc: Liberar Cursor"
align = 1
valign = 1
autowrap = true